--- a/portfolio/scss/sections/_home-work.scss
+++ b/portfolio/scss/sections/_home-work.scss
@@ -6,6 +6,7 @@
   position: relative;
   z-index: 2;
   margin-top: 100dvh;
+  overflow: hidden;
 
   min-height: auto;
 
